feat: added schema endpoints
